--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:required="false" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -21,6 +22,9 @@
         tools:targetApi="31">
         <activity
             android:name=".notiContra"
+            android:exported="false" />
+        <activity
+            android:name=".Resultado"
             android:exported="false" />
         <activity
             android:name=".Confirmacion"
