--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.front" android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -21,13 +19,13 @@
         android:theme="@style/Theme.CodeCamera"
         tools:targetApi="31">
         <activity
-            android:name=".notiContra"
+            android:name=".ForgotPasswordDialog"
             android:exported="false" />
         <activity
-            android:name=".Resultado"
+            android:name=".AccessControlActivity"
             android:exported="false" />
         <activity
-            android:name=".Confirmacion"
+            android:name=".IdentityVerificationActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
